--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi, Tanya here</h1>
-				<p>Consultant at work, Dreamer at heart, Story Teller<a href="/about">  Read more about my life...</a></p>
+				<p>Consultant at work, Dreamer at heart, Story Teller  <a href="/about">  Read more...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
